force-app/main/default/objects/ServiceAppointment/fields/All_Call_Bridges__c.field-meta.xml
<CustomField>
    <fullName>All_Call_Bridges__c</fullName>
    <formula>Linked_Bridges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Call Bridges</label>
    <type>Text</type>
</CustomField>