force-app/main/default/objects/ServiceAppointment/fields/Available_for_Signup__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record is available for Sign up</description>
    <label>Available for Signup</label>
    <type>Checkbox</type>
</CustomField>