force-app/main/default/objects/ServiceAppointment/fields/Conference_18__c.field-meta.xml
<CustomField>
    <fullName>Conference_18__c</fullName>
    <formula>CASESAFEID(Work_Order__r.Conference__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference 18</label>
    <type>Text</type>
</CustomField>