force-app/main/default/objects/ServiceAppointment/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>FSL Roles</relationshipLabel>
    <relationshipName>FSL_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>