force-app/main/default/objects/ServiceAppointment/fields/Conference_ID__c.field-meta.xml
<CustomField>
    <fullName>Conference_ID__c</fullName>
    <formula>Work_Order__r.Conference__r.Conference_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference ID</label>
    <type>Text</type>
</CustomField>