force-app/main/default/objects/ServiceAppointment/fields/Conference_Status__c.field-meta.xml
<CustomField>
    <fullName>Conference_Status__c</fullName>
    <formula>TEXT(Conference__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference Status</label>
    <type>Text</type>
</CustomField>