force-app/main/default/objects/ServiceAppointment/fields/Dynamic__c.field-meta.xml
<CustomField>
    <fullName>Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dynamic</label>
    <type>Checkbox</type>
</CustomField>