force-app/main/default/objects/ServiceAppointment/fields/IGLOO_Finish__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_Finish__c</fullName>
    <label>IGLOO Finish</label>
    <type>DateTime</type>
</CustomField>