force-app/main/default/objects/ServiceAppointment/fields/IGLOO_Start__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_Start__c</fullName>
    <label>IGLOO Start</label>
    <type>DateTime</type>
</CustomField>