force-app/main/default/objects/ServiceAppointment/fields/In_Atlantis__c.field-meta.xml
<CustomField>
    <fullName>In_Atlantis__c</fullName>
    <formula>ServiceTerritory.Name = &quot;Atlantis&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In_Atlantis</label>
    <type>Checkbox</type>
</CustomField>