force-app/main/default/objects/ServiceAppointment/fields/Internal_Record__c.field-meta.xml
<CustomField>
    <fullName>Internal_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Record</label>
    <type>Checkbox</type>
</CustomField>