force-app/main/default/objects/ServiceAppointment/fields/Is_AL__c.field-meta.xml
<CustomField>
    <fullName>Is_AL__c</fullName>
    <formula>Work_Order__r.WorkType.IsAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is AL</label>
    <type>Checkbox</type>
</CustomField>