force-app/main/default/objects/ServiceAppointment/fields/Is_CallRole__c.field-meta.xml
<CustomField>
    <fullName>Is_CallRole__c</fullName>
    <formula>Work_Order__r.WorkType.Call_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_CallRole</label>
    <type>Checkbox</type>
</CustomField>