force-app/main/default/objects/ServiceAppointment/fields/Is_Lead1__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead1__c</fullName>
    <formula>(
    CONTAINS(Role_ID__c, &quot;lead_1&quot;)
    ||
    CONTAINS(Role_ID__c, &quot;lead_0&quot;)
)
&amp;&amp;
NOT(ISPICKVAL(Status, &quot;Canceled&quot;))
&amp;&amp;
NOT(ISPICKVAL(Status, &quot;Incomplete&quot;))
&amp;&amp;
Work_Order__r.WorkType.Primary_Lead__c
&amp;&amp;
(
    Split_Level__c &lt; 2
    ||
    ISBLANK(Split_Level__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead1</label>
    <type>Checkbox</type>
</CustomField>