force-app/main/default/objects/ServiceAppointment/fields/Is_Skilled__c.field-meta.xml
<CustomField>
    <fullName>Is_Skilled__c</fullName>
    <formula>Work_Order__r.WorkType.IsSkilled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Skilled</label>
    <type>Checkbox</type>
</CustomField>