force-app/main/default/objects/ServiceAppointment/fields/Linked_Bridges__c.field-meta.xml
<CustomField>
    <fullName>Linked_Bridges__c</fullName>
    <formula>Work_Order__r.Conference__r.Linked_Bridges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Bridges</label>
    <type>Text</type>
</CustomField>