force-app/main/default/objects/ServiceAppointment/fields/No_Labor_Accounts__c.field-meta.xml
<CustomField>
    <fullName>No_Labor_Accounts__c</fullName>
    <formula>CONTAINS(Work_Order__r.Conference__r.Company__r.Name , &quot;GOA&quot;)
||
CONTAINS(Work_Order__r.Conference__r.Company__r.Name , &quot;Premiere1&quot;)
||
CONTAINS(Work_Order__r.Conference__r.Company__r.Name , &quot;Premiere 1&quot;)
||
CONTAINS(Work_Order__r.Conference__r.Company__r.Name , &quot;CourtCall, LLC&quot;)
||
Work_Order__r.Conference__r.Company__r.External_ID__c = &quot;07975&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Labor Accounts</label>
    <type>Checkbox</type>
</CustomField>