force-app/main/default/objects/ServiceAppointment/fields/OPT_Q3_Breaks__c.field-meta.xml
<CustomField>
    <fullName>OPT_Q3_Breaks__c</fullName>
    <formula>!Role_Not_Needed__c
&amp;&amp;
ISPICKVAL(Status, &quot;New&quot;)
&amp;&amp;
WorkType_Name__c = &quot;Break&quot;
&amp;&amp;
DueDate - (Duration / 1440) &gt; NOW() + 2
&amp;&amp;
DueDate - (Duration / 1440) &lt; NOW() + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPT - Q3 Breaks</label>
    <type>Checkbox</type>
</CustomField>