force-app/main/default/objects/ServiceAppointment/fields/OPT_Q4_Duty__c.field-meta.xml
<CustomField>
    <fullName>OPT_Q4_Duty__c</fullName>
    <formula>!Role_Not_Needed__c
&amp;&amp;
ISPICKVAL(Status , &quot;New&quot;)
&amp;&amp;
WorkType_Category__c = &quot;Duty&quot;
&amp;&amp;
DueDate - (Duration / 1440) &gt; NOW() + 2
&amp;&amp;
DueDate - (Duration / 1440) &lt; NOW() + 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPT - Q4 Duty</label>
    <type>Checkbox</type>
</CustomField>