force-app/main/default/objects/ServiceAppointment/fields/Original_RoleId__c.field-meta.xml
<CustomField>
    <fullName>Original_RoleId__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Original RoleId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>