force-app/main/default/objects/ServiceAppointment/fields/PPS_Stray__c.field-meta.xml
<CustomField>
    <fullName>PPS_Stray__c</fullName>
    <formula>Work_Order__r.WorkType.Name = &quot;Stray&quot;
&amp;&amp;
Work_Order__r.Conference__r.Company__r.Name = &quot;US Duty&quot;
&amp;&amp;
(
    (
        DATEVALUE(CreatedDate + 1)
        &gt;=
        DATE(Year(DATEVALUE(CreatedDate + 1)),3,14) 
        - 
        MOD(DATE(Year(DATEVALUE(CreatedDate + 1)),3,14) - DATE(1900, 1, 7), 7) 
        &amp;&amp; 
        DATEVALUE(CreatedDate + 1) 
        &lt;
        DATE(Year(DATEVALUE(CreatedDate + 1)),11, 7) 
        - 
        MOD(DATE(Year(DATEVALUE(CreatedDate + 1)),11, 7) - DATE(1900, 1, 7), 7)
        &amp;&amp;
        NOW() &gt;= (DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate)) &amp; &quot; 13:40:00&quot;) + 1)
    )
    ||
    NOW() &gt;= (DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate)) &amp; &quot; 14:40:00&quot;) + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPS Stray</label>
    <type>Checkbox</type>
</CustomField>