force-app/main/default/objects/ServiceAppointment/fields/PPS_Visible__c.field-meta.xml
<CustomField>
    <fullName>PPS_Visible__c</fullName>
    <formula>!No_Labor_Accounts__c
&amp;&amp;
Work_Order__r.WorkType.PPS_Visible__c
&amp;&amp;
EarliestStartTime - (30/1440) &gt; NOW()
&amp;&amp;
(

    (
        DATEVALUE(EarliestStartTime) &lt;  DATEVALUE(text(TODAY()+(CASE(MOD(TODAY() - DATE(1900,1,6),7),0,3,1,2,2,2,3,2,4,2,5,4,6,4,2) - PPS_Visible_Window__c)))
    )
    ||
    (
        NOW() &gt;= DATETIMEVALUE(TEXT(TODAY()) &amp; &quot; 11:00:00&quot;)
        &amp;&amp; 
        DATEVALUE(EarliestStartTime) &lt;  DATEVALUE(text(TODAY()+(CASE(MOD(TODAY() - DATE(1900,1,6),7),0,3,1,2,2,2,3,2,4,2,5,4,6,4,2) + PPS_Visible_Window__c + 1)))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPS Visible</label>
    <type>Checkbox</type>
</CustomField>