force-app/main/default/objects/ServiceAppointment/fields/Report_to_Bridge__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Bridge__c</fullName>
    <formula>Assigned_Bridge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report to Bridge</label>
    <type>Text</type>
</CustomField>