force-app/main/default/objects/ServiceAppointment/fields/Resource_Count__c.field-meta.xml
<CustomField>
    <fullName>Resource_Count__c</fullName>
    <label>Resource Count</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>