force-app/main/default/objects/ServiceAppointment/fields/Role_Id_RO__c.field-meta.xml
<CustomField>
    <fullName>Role_Id_RO__c</fullName>
    <formula>Role_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role.Id</label>
    <type>Text</type>
</CustomField>