force-app/main/default/objects/ServiceAppointment/fields/Role_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Role_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Not Needed</label>
    <type>Checkbox</type>
</CustomField>