force-app/main/default/objects/ServiceAppointment/fields/Split_Level__c.field-meta.xml
<CustomField>
    <fullName>Split_Level__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Split Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>