force-app/main/default/objects/ServiceAppointment/fields/Time_Locked__c.field-meta.xml
<CustomField>
    <fullName>Time_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Breaks Only</inlineHelpText>
    <label>Time Locked</label>
    <type>Checkbox</type>
</CustomField>