force-app/main/default/objects/ServiceAppointment/fields/Time_Slide__c.field-meta.xml
<CustomField>
    <fullName>Time_Slide__c</fullName>
    <description>Indicates roles that can slide times and not snap</description>
    <formula>IsBreak__c
&amp;&amp;
!Time_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Slide</label>
    <type>Checkbox</type>
</CustomField>