force-app/main/default/objects/ServiceAppointment/fields/ToolTip__c.field-meta.xml
<CustomField>
    <fullName>ToolTip__c</fullName>
    <label>ToolTip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>