force-app/main/default/objects/ServiceAppointment/fields/Unassign__c.field-meta.xml
<CustomField>
    <fullName>Unassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unassign</label>
    <type>Checkbox</type>
</CustomField>