force-app/main/default/objects/ServiceAppointment/fields/WorkType_Category__c.field-meta.xml
<CustomField>
    <fullName>WorkType_Category__c</fullName>
    <formula>TEXT(Work_Order__r.WorkType.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkType Category</label>
    <type>Text</type>
</CustomField>