force-app/main/default/objects/ServiceAppointment/fields/WorkType_Group__c.field-meta.xml
<CustomField>
    <fullName>WorkType_Group__c</fullName>
    <formula>TEXT(Work_Order__r.WorkType.Category_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkType Group</label>
    <type>Text</type>
</CustomField>