force-app/main/default/objects/ServiceAppointment/fields/WorkType_Name__c.field-meta.xml
<CustomField>
    <fullName>WorkType_Name__c</fullName>
    <formula>Work_Order__r.WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkType Name</label>
    <type>Text</type>
</CustomField>