force-app/main/default/objects/ServiceAppointment/fields/X10_10_Role__c.field-meta.xml
<CustomField>
    <fullName>X10_10_Role__c</fullName>
    <formula>Work_Order__r.WorkType.WFH_10_10__c
&amp;&amp; 
(IGLOO_Finish__c - IGLOO_Start__c) *1440 = 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10/10 Role</label>
    <type>Checkbox</type>
</CustomField>