force-app/main/default/objects/ServiceAppointment/validationRules/FSL_Role_Active_Only_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL_Role_Active_Only_Changes</fullName>
    <active>true</active>
    <description>Regulates changes made to inactive roles</description>
    <errorConditionFormula>!Aim_to_Misbehave__c
&amp;&amp;
!Active_Role__c
&amp;&amp;
(
    ISCHANGED(Resource__c)
    ||
    ISCHANGED(SchedStartTime)
    ||
    ISCHANGED(SchedEndTime)
    ||
    ISCHANGED(Status)
    ||
    ISCHANGED(Role_Not_Needed__c)
    ||
    ISCHANGED(ServiceTerritoryId)
)</errorConditionFormula>
    <errorMessage>Scheduling related changes are only allowed for active roles.</errorMessage>
</ValidationRule>