force-app/main/default/objects/ServiceAppointment/validationRules/FSL_Role_Not_Needed_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>FSL_Role_Not_Needed_Only</fullName>
    <active>true</active>
    <errorConditionFormula>!Aim_to_Misbehave__c
&amp;&amp;
ISCHANGED(Role_Not_Needed__c)
&amp;&amp;
(
    ISCHANGED(Resource__c)
    ||
    ISCHANGED(SchedStartTime)
    ||
    ISCHANGED(SchedEndTime)
    ||
    ISCHANGED(Status)
    ||
    ISCHANGED(ServiceTerritoryId)
)</errorConditionFormula>
    <errorMessage>Scheduling related fields cannot be changed when Role Not Needed is changed</errorMessage>
</ValidationRule>