force-app/main/default/objects/ServiceAppointment/listViews/PPS_All_Roles.listView-meta.xml
<ListView>
    <fullName>PPS_All_Roles</fullName>
    <booleanFilter>(1 AND 2 AND 4) OR (1 AND 3 AND 4)</booleanFilter>
    <columns>RoleId_PPS__c</columns>
    <columns>Name</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>EstDuration</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>PPS_Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PPS_Stray__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Role_Not_Needed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>PPS All Roles</label>
    <language>en_US</language>
    <sharedTo>
        <group>FSL_Admin_Dispatch</group>
        <group>FSL_PPS_Contractors</group>
    </sharedTo>
</ListView>